# ferrous-opencc

./: .gitignore  Cargo.toml  README.md  README.zh-CN.md  build.rs  cbindgen.toml  compiler_logic.rs  opencc.h  readme.md
.github/workflows/: ci.yml
assets/: hk2s.json  hk2t.json  jp2t.json  s2hk.json  s2t.json  s2tw.json  s2twp.json  t2hk.json  t2jp.json  t2s.json  t2tw.json  tw2s.json  tw2sp.json  tw2t.json
assets/dictionaries/: HKVariantsRev.txt  JPVariantsRev.txt  TWVariantsRev.txt  hk2s.json  hk2t.json  jp2t.json  s2t.json  s2twp.json  t2s.json  t2tw.json  tw2s.json  tw2t.json
benches/: performance.rs  s2twp_bench.rs
examples/: s2twp.rs
ferrous-opencc-compiler/: Cargo.toml
ferrous-opencc-compiler/src/: lib.rs
src/: compiler.rs  config.rs  conversion.rs  dictionary.rs  error.rs  ffi.rs  lib.rs
src/conversion/: mod.rs
src/dictionary/: dict_group.rs  fst_dict.rs  mod.rs
src/segmentation/: mod.rs
tests/: opencc.rs
tests/data/: testcases.json  testcases.jsonc
