[package]
name = "ferrous-opencc"
version = "0.1.2"
edition = "2024"
authors = ["apoint123 <vpnzaph@outlook.com>"]
description = "A pure Rust implementation of Open Chinese Convert (OpenCC), for fast and reliable conversion between Traditional and Simplified Chinese."
license = "Apache-2.0"
repository = "https://github.com/apoint123/ferrous-opencc"
homepage = "https://github.com/apoint123/ferrous-opencc"
keywords = ["opencc", "chinese", "pure-rust", "traditional", "simplified"]
categories = ["text-processing", "localization"]

[dependencies]
bincode = { version = "2", features = ["derive"] }
fst = "0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
thiserror = "2"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
phf = { version = "0", features = ["macros"] }

[lib]
path = "src/lib.rs"

[[bin]]
name = "opencc-dict-compiler"
path = "src/bin/dict-compiler.rs"

[dev-dependencies]
tempfile = "3"
ferrous-opencc = { path = "." }

[build-dependencies]
anyhow = "1"
bincode = "2"
fst = "0"
phf = { version = "0", features = ["macros"] }
phf_codegen = "0"