[package]
name = "ferrous-opencc"
version = "0.3.1"
edition = "2024"
authors = ["apoint123 <vpnzaph@outlook.com>"]
description = "A pure Rust implementation of Open Chinese Convert (OpenCC), for fast and reliable conversion between Traditional and Simplified Chinese."
license = "Apache-2.0"
repository = "https://github.com/apoint123/ferrous-opencc"
homepage = "https://github.com/apoint123/ferrous-opencc"
keywords = ["opencc", "chinese", "pure-rust", "traditional", "simplified"]
categories = ["text-processing", "localization"]

[lib]
name = "ferrous_opencc"
crate-type = ["cdylib", "rlib", "staticlib"]

[[bin]]
name = "opencc-dict-compiler"
path = "src/bin/dict-compiler.rs"
required-features = ["cli"]

[dependencies]
anyhow = "1.0"
bincode = { version = "2.0", features = ["derive"] }
ferrous-opencc-compiler = "0.3"
fst = "0.4"
phf = { version = "0.13", features = ["macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
zstd = "0.13"

clap = { version = "4.5", features = ["derive"], optional = true }
wasm-bindgen = { version = "0.2", optional = true }

[build-dependencies]
anyhow = "1.0"
cbindgen = "0.29"
ferrous-opencc-compiler = "0.3"
phf_codegen = "0.13"
tempfile = "3.23"

[dev-dependencies]
tempfile = "3.23"

[features]
default = ["s2t-conversion", "t2s-conversion"]

s2t-conversion = []
t2s-conversion = []
japanese-conversion = []

cli = ["dep:clap"]

wasm = ["dep:wasm-bindgen", "s2t-conversion", "t2s-conversion"]

full = ["s2t-conversion", "t2s-conversion", "japanese-conversion"]

[patch.crates-io]
ferrous-opencc-compiler = { path = "ferrous-opencc-compiler" }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = 'abort'
debug = false

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }

cast_possible_wrap = "allow"
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
cast_precision_loss = "allow"

items_after_statements = "allow"
missing_errors_doc = "allow"
future_not_send = "allow"
ignore_without_reason = "allow"
missing_panics_doc = "allow"
unreadable_literal = "allow"
